fixed back to top on mobile

--- a/_sass/_site-footer.scss
+++ b/_sass/_site-footer.scss
@@ -42,7 +42,7 @@
   }
 }
 
-@media only screen and (min-width: 481px) {
+@media only screen and (min-width: 320px) {
   .footer-bottom {
     padding-right: 60px;
     position: relative;
